modified solution to add additional users and provide them access to their own todos